[package]
name = "rust-https"
version = "0.1.0"
description = "A lightweight HTTP client with modern UI"
authors = ["Pokem0n2"]
license = "MIT"
repository = "https://github.com/Pokem0n2/rust-https"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
log = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
